# CodeCast

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  setup.py  smoke-test.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/codecast/: cli.py  git_ops.py  publisher.py  storage.py  web.py
tests/: test_cli.py
